# vector_desk

./: .gitignore  Dockerfile  README.md  VectorDesk_StartGuide.docx  VectorDesk_UserGuide.docx  inference.py  openenv.yaml  pyproject.toml  requirements.txt
environment/: actions.py  env.py  observations.py  reward.py  state.py
graders/: calendar_grader.py  support_grader.py
rag/: embeddings.py  vector_store.py
server/: app.py
tasks/: calendar_task.py
vector_desk/: .gitignore  README.md  app.py  openenv.yaml
vector_desk/baseline/: run_agent.py
vector_desk/graders/: email_grader.py
vector_desk/rag/: retriever.py
vector_desk/tasks/: email_task.py  support_task.py
